--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -17,16 +17,21 @@
   </div>
 
   <!-- Login Container -->
-  <div style="max-width: 400px; margin: 60px auto; background: white; border-radius: 12px; box-shadow: 0 10px 30px rgba(0,0,0,0.1); padding: 30px; text-align: center;">
+  <div style="max-width: 400px; margin: 60px auto; background: white; border-radius: 12px; box-shadow: 0 10px 30px rgba(0,0,0,0.1); 
+    padding: 30px; text-align: center;">
     <h2 style="color: #4c51bf; margin-bottom: 25px;">Login to SmartQuiz</h2>
 
     <form id="loginForm">
-      <input type="text" placeholder="Username" name="username" required style="width: 100%; padding: 10px; margin-bottom: 15px; border: 1px solid #ccc; border-radius: 6px;"><br>
-      <input type="password" placeholder="Password" name="password" required style="width: 100%; padding: 10px; margin-bottom: 25px; border: 1px solid #ccc; border-radius: 6px;"><br>
+      <input type="text" placeholder="Username" name="username" required style="width: 100%; padding: 10px; margin-bottom: 15px; 
+      border: 1px solid #ccc; border-radius: 6px;"><br>
+      <input type="password" placeholder="Password" name="password" required style="width: 100%; padding: 10px; margin-bottom: 25px; 
+      border: 1px solid #ccc; border-radius: 6px;"><br>
 
       <div style="display: flex; justify-content: center; gap: 15px;">
-        <button type="button" onclick="loginAs('user')" style="background: #4c51bf; color: white; padding: 10px 20px; border: none; border-radius: 6px; cursor: pointer;">User Login</button>
-        <button type="button" onclick="loginAs('admin')" style="background: #4c51bf; color: white; padding: 10px 20px; border: none; border-radius: 6px; cursor: pointer;">Admin Login</button>
+        <button type="button" onclick="loginAs('user')" style="background: #4c51bf; color: white; 
+        padding: 10px 20px; border: none; border-radius: 6px; cursor: pointer;">User Login</button>
+        <button type="button" onclick="loginAs('admin')" style="background: #4c51bf; color: white; padding: 10px 20px; 
+        border: none; border-radius: 6px; cursor: pointer;">Admin Login</button>
       </div>
     </form>
   </div>
@@ -62,6 +67,5 @@
       }
     }
   </script>
-
 </body>
 </html>
